# topic_models

./: LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
topic_models/: __init__.py
topic_models/models/: __init__.py  dmm.py  lda.py
topic_models/res/: dictionary.txt
topic_models/res/wiki20/: 6th_Army__German_Empire_.txt  6th_Marine_Regiment__United_States_.txt  6th_World_Science_Fiction_Convention.txt  7_65_21mm_Mannlicher.txt  7_Zwerge___Der_Wald_ist_nicht_genug.txt  8BC.txt  8_mm_video_format.txt  FC_Irgiz_Balakovo.txt  FC_S_dburgenland.txt  Fazal_Ali_Qureshi.txt  FeardotCom.txt  Federico_Trillo.txt  It_Blows_My_Mind.txt  It_s_All_Good__MC_Breed_album_.txt  Italian_propaganda_during_World_War_I.txt  Itziar_Okariz.txt  Ivan_Mikhailichenko.txt  Otinja.txt  Our_Daily_Bread.txt  Out_All_Night.txt
topic_models/sample/: _sample.pyx  bigdouble.cc  bigdouble.h  bigdouble.pxd  bigdouble.pyx  build.sh  py_big_double.cpp  py_big_double.pyx  setup.py
topic_models/utils/: bigdouble.cc  bigdouble.h  bigdouble.pyx  dictionary.py  func.py  settings.py
