[metadata]
name = topic_models-linwei
version = 0.0.1
author = Linwei Li
author_email = linweilifudan@gmail.com
description = Cython based implementation for topic models (LDA, DMM)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuealves/topic_models
project_urls =
    Bug Tracker = https://github.com/yuealves/topic_models/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .